--- a/cameratest/cameratest/cameratest/ChangePassword.xaml
+++ b/cameratest/cameratest/cameratest/ChangePassword.xaml
@@ -2,16 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="cameratest.ChangePassword"
+             xmlns:i18n="clr-namespace:cameratest;assembly=cameratest"
              BackgroundColor="White">
-  <!--<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />-->
+
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness"
                 iOS="20, 40, 20, 20"
-                Android="20, 5, 20, 20"
-                WinPhone="20, 20, 20, 20" />
+                Android="20, 5, 20, 20" />
   </ContentPage.Padding>
   <ContentPage.Content>
-    <ScrollView>
+   <ScrollView>
     <StackLayout VerticalOptions="FillAndExpand"
                  HorizontalOptions="FillAndExpand"
                  Orientation="Vertical"
@@ -22,22 +22,22 @@
                     Orientation="Horizontal"
                     Spacing="1">
 
-        <Button x:Name="about" IsEnabled="True" Clicked="openInfoPage" Image="info.png" BackgroundColor="White"/>
-        <Button x:Name="settings" IsEnabled="True" Clicked="openSettings" Image="settings.png" BackgroundColor="White"/>
+                    <Button x:Name="about" IsEnabled="True" Clicked="openInfoPage" Image="info.png" BackgroundColor="White"/>
+                    <Button x:Name="settings" IsEnabled="True" Clicked="openSettings" Image="settings.png" BackgroundColor="White"/>
       </StackLayout>
       <Image Source="logo_hintergrund.jpg" />
       
       <Label Text="E-Mail" />
       <Entry x:Name="eMail"/>
-      <Label Text="Bisheriges Passwort" />
+      <Label Text="{i18n:Translate str_oldPassword}" />
       <Entry x:Name="oldPassword" IsPassword="true"/>
-      <Label Text="neues Passwort" />
+      <Label Text="{i18n:Translate str_newPassword}" />
       <Entry x:Name="newPassword" IsPassword="true" />
-      <Label Text="neues Passwort wiederholen" />
+      <Label Text="{i18n:Translate str_repeatNewPassword}" />
       <Entry x:Name="newPasswordRepeat"  IsPassword="true" Completed="Completed_newPasswordRepeat"/>
-      <Button x:Name="changePassword" Text="Passwort ändern" IsEnabled="True" Clicked="changedPassword" />
+      <Button x:Name="changePassword" Text="{i18n:Translate str_changePassword}" IsEnabled="True" Clicked="changedPassword" />
       
     </StackLayout>
-      </ScrollView>
+   </ScrollView>
   </ContentPage.Content>
 </ContentPage>
