--- a/cameratest/cameratest/cameratest/infoPage.xaml
+++ b/cameratest/cameratest/cameratest/infoPage.xaml
@@ -2,16 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="cameratest.infoPage"
+             xmlns:i18n="clr-namespace:cameratest;assembly=cameratest"
              BackgroundColor="White">
   <!--<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />-->
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness"
                 iOS="20, 40, 20, 20"
-                Android="20, 5, 20, 20"
-                WinPhone="20, 20, 20, 20" />
+                Android="20, 5, 20, 20" />
   </ContentPage.Padding>
   <ContentPage.Content>
-    <ScrollView>
+   <ScrollView>
     <StackLayout VerticalOptions="FillAndExpand"
                    HorizontalOptions="FillAndExpand"
                    Orientation="Vertical"
@@ -22,8 +22,8 @@
                     Orientation="Horizontal"
                     Spacing="1">
 
-        <Button x:Name="about" IsEnabled="False" Image="info_greyed.png" BackgroundColor="White"/>
-        <Button x:Name="settings" IsEnabled="True" Clicked="openSettings" Image="settings.png" BackgroundColor="White"/>
+                  <Button x:Name="about" IsEnabled="False" Image="info_greyed.png" BackgroundColor="White"/>
+                  <Button x:Name="settings" IsEnabled="True" Clicked="openSettings" Image="settings.png" BackgroundColor="White"/>
       </StackLayout>
 
       <Image Source="logo_hintergrund.jpg" />
@@ -33,10 +33,6 @@
       <Label Text="Bleicheweg 5" HorizontalOptions="Center" FontAttributes = "Bold"/>
       <Label Text="CH-5605 Dottikon" HorizontalOptions="Center" FontAttributes = "Bold" />
       <Label Text="Schweiz" HorizontalOptions="Center" FontAttributes = "Bold"/>
-      
-      <Label Text=""/>
-      <Label Text=""/>
-      <Label Text=""/>
 
       <Label Text="Icons made by:" FontSize = "Micro" FontAttributes = "Italic" />
       <Label Text="http://www.flaticon.com/authors/freepik" FontSize = "Micro" FontAttributes = "Italic" />
@@ -44,6 +40,6 @@
       <Label Text="http://www.flaticon.com/authors/egor-rumyantsev" FontSize = "Micro" FontAttributes = "Italic" />
 
     </StackLayout>
-      </ScrollView>
+   </ScrollView>
   </ContentPage.Content>
 </ContentPage>
