--- a/cameratest/cameratest/cameratest/resetPassword.xaml
+++ b/cameratest/cameratest/cameratest/resetPassword.xaml
@@ -2,12 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="cameratest.resetPassword"
-              BackgroundColor="White">
+             xmlns:i18n="clr-namespace:cameratest;assembly=cameratest"
+             BackgroundColor="White">
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness"
                 iOS="20, 40, 20, 20"
-                Android="20, 5, 20, 20"
-                WinPhone="20, 20, 20, 20" />
+                Android="20, 5, 20, 20" />
   </ContentPage.Padding>
   <ContentPage.Content>
     <ScrollView>
@@ -21,15 +21,15 @@
                       Orientation="Horizontal"
                       Spacing="1">
 
-          <Button x:Name="about" IsEnabled="True" Clicked="openInfoPage" Image="info.png" BackgroundColor="White"/>
-          <Button x:Name="settings" IsEnabled="True" Clicked="openSettings" Image="settings.png" BackgroundColor="White"/>
+                    <Button x:Name="about" IsEnabled="True" Clicked="openInfoPage" Image="info.png" BackgroundColor="White"/>
+                    <Button x:Name="settings" IsEnabled="True" Clicked="openSettings" Image="settings.png" BackgroundColor="White"/>
         </StackLayout>
 
         <Image Source="logo_hintergrund.jpg" />
         
-        <Label Text="Geben Sie Ihren Benutzernamen ein:" />
+        <Label Text="{i18n:Translate str_enterUserData}" />
         <Entry x:Name="eMail" Placeholder="E-Mail" />
-        <Button x:Name="resetingPassword" Text="Reset Passwort" IsEnabled="True" Clicked="getNewPassword" />
+        <Button x:Name="resetingPassword" Text="{i18n:Translate str_changePassword}" IsEnabled="True" Clicked="getNewPassword" />
       </StackLayout>
     </ScrollView>
   </ContentPage.Content>
